[project]
name = "Security"
description = "The security service for the AI assistant app"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.2",
    "Flask-Session==0.8.0",
    "requests==2.32.5",
    "cryptography==46.0.1",
    "msal==1.34.0",
    "python-sdk @ git+https://github.com/LukeRoberson/python-sdk.git",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = [
    "tests*",
    "docs*",
    "config*",
    "flask_session*",
    "__pycache__*",
    "*.pyc",
]

[tool.versioning]
major = 1
minor = 0
patch = 2

[tool.flake8]
max-line-length = 88
exclude = [
    "__pycache__",
    "static",
    "templates",
]
